# prometheus-parser-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
examples/: label_drop.rs  label_passthrough.rs  parse.rs  reformat.rs  return_value.rs
src/: lib.rs  parser.rs  prometheus.pest
src/types/: expression.rs  function.rs  group.rs  misc.rs  mod.rs  operator.rs  return_value.rs  selector.rs
tests/: label_passthrough.rs  simple.rs  subquery.rs
