[package]
name = "prometheus-parser"
description = "a Rust library for parsing and validating Prometheus query expressions"
authors = ["Tim Buckley <timothy.jas.buckley@hpe.com>"]
edition = "2018"
license = "MIT"
keywords = ["parser", "prometheus", "pest"]
homepage = "https://github.com/HewlettPackard/prometheus-parser-rs/"
repository = "https://github.com/HewlettPackard/prometheus-parser-rs/"
exclude = [".github/**/*"]
readme = "README.md"

# NOTE: do not change the version here, it will be replaced with the git tag
# version by CI
version = "0.1.0"

[dependencies]
pest = "2.1"
pest_consume = "1.1"
pest_derive = "2.1"
pest_consume_macros = "1.1"
enquote = "1.1"
lazy_static = "1"

[dev-dependencies]
maplit = "1"

[lib]
name = "prometheus_parser"
path = "src/lib.rs"
